# IZ2-C

./: CMakeLists.txt  README.md  main.c
.github/workflows/: ci.yml
Data/: read.txt
Test/: CMakeLists.txt
src/: CMakeLists.txt
src/Letters/: CMakeLists.txt  Letters.c  Letters.h
src/Searching/: CMakeLists.txt  Searching.c  Searching.h
src/Searching/Consistent/: CMakeLists.txt  Searching.c
src/Searching/Parallel/: CMakeLists.txt  Searching.c
src/Sorting/: CMakeLists.txt  Sorting.c  Sorting.h
src/Sorting/Consistent/: CMakeLists.txt  Sorting.c
src/Sorting/Parallel/: CMakeLists.txt  Sorting.c
src/Vector/: CMakeLists.txt  Vector.c  Vector.h
src/Vector/Consistent/: CMakeLists.txt  Vector.c
src/Vector/Parallel/: CMakeLists.txt  Vector.c
src/interface/: CMakeLists.txt  interface.c  interface.h
