cmake_minimum_required(VERSION 3.0)
project(IZ2 C)

option(parallel "Build parallel version" OFF)
option(test "Build test" ON)

set(CMAKE_C_STANDARD 99)
add_subdirectory(src)
add_executable(IZ2 main.c)
file(GLOB DATA_FILES "Data/*.txt")
file(COPY ${DATA_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Data)
set(CMAKE_CXX_COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${DCMAKE_CC_COMPILER} -pthread -fsanitize=address")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -pthread -lm")
target_link_libraries(IZ2 LINK_PUBLIC Letters interface)
if(parallel)
    target_link_libraries(IZ2 LINK_PUBLIC Searching_Parallel Sorting_Parallel Vector_Parallel)
else()
    target_link_libraries(IZ2 LINK_PUBLIC Searching_Consistent Sorting_Consistent Vector_Consistent)
endif(parallel)
if (test)
    add_subdirectory(Test)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LCOV_COMPILE_FLAGS} -pthread -coverage -lgcov -g -Wall -Werror")
    set(CMAKE_CXX_COMPILE_FLAGS "${CMAKE_CXX_FLAGS} ${LCOV_LINK_FLAGS} -pthread")

endif ()

