cmake_minimum_required(VERSION 3.0)
project(GoogleTest)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}" )
project(tests)
file(GLOB CONSISTENT_SOURCES consistent/*.cpp)
file(GLOB PARALLEL_SOURCES parallel/*.cpp)
if(parallel)
    add_executable(${PROJECT_NAME} ${PARALLEL_SOURCES})
    target_link_libraries(IZ2 LINK_PUBLIC Searching_Parallel Sorting_Parallel Vector_Parallel)
else()
    add_executable(${PROJECT_NAME} ${CONSISTENT_SOURCES})
    target_link_libraries(IZ2 LINK_PUBLIC Searching_Consistent Sorting_Consistent Vector_Consistent)
endif(parallel)

