set(LIBRARY_NAME Searching_Parallel)
file(GLOB SRC Searching.c ../Searching.h)
add_library(${LIBRARY_NAME} SHARED ${SRC})
target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ../.)
target_link_libraries(${LIBRARY_NAME} PRIVATE m)
target_link_libraries(${LIBRARY_NAME} LINK_PUBLIC Letters Vector_Consistent Sorting_Consistent)